--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -44,7 +44,21 @@ section {
   font-style: italic;
   color: var(--wild-sand-400);
 }
-.formFlex input:focus {
+
+.formFlex textarea {
+  width: 100%;
+  height: 3rem;
+  background-color: var(--wild-sand-100);
+  border: 2px solid transparent;
+  border-radius: 10px;
+  padding: 0.3rem 0.6rem;
+  color: var(--seagull-950);
+  transition: border 0.25s, box-shadow 0.25s;
+  outline: none;
+}
+
+.formFlex input:focus,
+.formFlex textarea:focus {
   border: 2px solid var(--seagull-500);
   box-shadow: 1px 1px 10px var(--wild-sand-200);
 }
