--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -83,9 +83,9 @@ button {
   cursor: pointer;
   transition: border-color 0.25s, box-shadow 0.25s;
 }
-button:hover {
+/* button:hover {
   box-shadow: 3px 3px 10px var(--wild-sand-200);
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
